// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCloseButton should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="Close"
    class="bpk-close-button"
    title="Close"
    type="button"
  >
    <span
      class="bpk-close-button__icon"
    >
      <svg
        aria-hidden="true"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCloseButton should render correctly with a custom className 1`] = `
<DocumentFragment>
  <button
    aria-label="Close"
    class="bpk-close-button my-custom-classname"
    title="Close"
    type="button"
  >
    <span
      class="bpk-close-button__icon"
    >
      <svg
        aria-hidden="true"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.587 3.467a1.5 1.5 0 10-2.194 2.046q.036.038.074.074l6.438 6.44-6.44 6.44a1.5 1.5 0 002.122 2.12l6.44-6.438 6.44 6.44a1.5 1.5 0 002.12-2.122l-6.438-6.44 6.44-6.44a1.5 1.5 0 00-2.122-2.12l-6.44 6.438-6.44-6.44z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCloseButton should render correctly with a custom icon 1`] = `
<DocumentFragment>
  <button
    aria-label="Close"
    class="bpk-close-button"
    title="Close"
    type="button"
  >
    <span
      class="bpk-close-button__icon"
    >
      <svg
        aria-hidden="true"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22.5A10.5 10.5 0 101.5 12 10.5 10.5 0 0012 22.5zM7.938 7.94h.002a1.5 1.5 0 012.12 0L12 9.878l1.94-1.94a1.5 1.5 0 012.12 2.122L14.122 12l1.94 1.94a1.5 1.5 0 01-2.122 2.12L12 14.122l-1.94 1.94a1.5 1.5 0 01-2.12-2.122L9.878 12l-1.94-1.94a1.5 1.5 0 010-2.12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
